cmake_minimum_required(VERSION 3.0)
project(cpp_study)

set(CMAKE_CXX_STANDARD 11)

add_executable(dm01_helloworld dm01_helloworld.cpp)
add_executable(dm02_namespace dm02_namespace.cpp)
add_executable(dm03_variableDefinitions dm03_variableDefinitions.cpp)
add_executable(dm04_registerKeyword dm04_registerKeyword.cpp)
add_executable(dm05_variableCheck dm05_variableCheck.cpp)
add_executable(dm06_struct dm06_struct.cpp)
add_executable(dm07_typeCheck dm07_typeCheck.cpp)
add_executable(dm08_addBoolTypeKeyword dm08_addBoolTypeKeyword.cpp)

