cmake_minimum_required(VERSION 3.0)
project(cpp_study)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(01-cPlusPlus)
add_subdirectory(02-class)
add_subdirectory(03-inheritance)
add_subdirectory(04-template)
add_subdirectory(05-stl)
add_subdirectory(06-boost)
add_subdirectory(07-spdlog)
add_subdirectory(08-cmdline)
