cmake_minimum_required(VERSION 3.1)
project(cpp_study)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(01-cPlusPlus)
add_subdirectory(02-class)
add_subdirectory(03-inheritance)
add_subdirectory(04-template)
add_subdirectory(05-stl)
add_subdirectory(06-boost)
add_subdirectory(07-spdlog)
add_subdirectory(08-cmdline)
add_subdirectory(09-jsoncpp)
add_subdirectory(10-mongodb)
add_subdirectory(11-acl)
