add_executable(dm01_helloworld dm01_helloworld.cpp)
add_executable(dm02_namespace dm02_命名空间.cpp)
add_executable(dm03_variableDefinitions dm03_变量定义.cpp)
add_executable(dm04_registerKeyword dm04_register关键字.cpp)
add_executable(dm05_variableCheck dm05_变量定义检测增强.cpp)
add_executable(dm06_struct dm06_struct类型功能增强.cpp)
add_executable(dm07_typeCheck dm07_变量类型检测增强.cpp)
add_executable(dm08_addBoolTypeKeyword dm08_增加bool类型.cpp)
add_executable(dm09_ternaryOperator dm09_三目运算符功能增强.cpp)
add_executable(dm10_constBase dm10_const基础.cpp)
add_executable(dm11_constInCpp dm11_C++中的const.cpp)
add_executable(dm12_constAndDefine dm12_const和define.cpp)
add_executable(dm13_referenceBase dm13_引用的概念.cpp)
add_executable(dm14_referenceFunctionParam dm14_引用做函数参数.cpp)
add_executable(dm15_referenceCompositeType dm15_复合类型的引用.cpp)
add_executable(dm16_referenceEssence dm16_引用的本质.cpp)
add_executable(dm17_referenceFunReturn dm17_函数返回值是一个引用.cpp)
add_executable(dm18_referencePoint dm18_指针的引用.cpp)
add_executable(dm19_referenceConst dm19_常引用.cpp)
add_executable(dm20_inlineFunction dm20_inline内联函数.cpp)
add_executable(dm21_funcDefaultParam dm21_函数默认参数.cpp)
add_executable(dm22_funcPlaceParam dm22_函数占位参数.cpp)
add_executable(dm23_funcOverload dm23_函数重载.cpp)
add_executable(dm24_funcOverloadAndFuncPoint dm24_函数重载和函数指针.cpp)
