
add_executable(dm01_classEncapsulation dm01_classEncapsulation.cpp)
add_executable(dm02_classSeparateCompilation dm02_classSeparateCompilation/main.cpp dm02_classSeparateCompilation/teacher.cpp)
add_executable(dm03_objectOriented1 dm03_objectOriented1/main.cpp dm03_objectOriented1/cube.cpp)
add_executable(dm04_objectOriented2 dm04_objectOriented2/main.cpp dm04_objectOriented2/circle.cpp dm04_objectOriented2/point.cpp)
add_executable(dm05_classConstructor1 dm05_classConstructor/constructor1.cc)
add_executable(dm05_classConstructor2 dm05_classConstructor/constructor2.cc)
add_executable(dm05_classConstructor3 dm05_classConstructor/constructor3.cc)
add_executable(dm05_classConstructorCopy12 dm05_classConstructor/constructor_copy_1_2.cc)
add_executable(dm05_classConstructorCopy3 dm05_classConstructor/constructor_copy_3.cc)
add_executable(dm05_classConstructorCopy4 dm05_classConstructor/constructor_copy_4.cc)
add_executable(dm05_classConstructorSummarizing dm05_classConstructor/constructor_summarizing.cc)
add_executable(dm06_deepCopy dm06_deepCopy.cc)
add_executable(dm07_constructorInitializerList dm07_constructorInitializerList.cc)
add_executable(dm08_constructorSummary1 dm08_constructorSummary1.cc)
add_executable(dm09_constructorSunmary2 dm09_constructorSunmary2.cc)
add_executable(dm10_new_delete1 dm10_new_delete1.cc)
add_executable(dm11_new_delete2 dm11_new_delete2.cc)
add_executable(dm12_static dm12_static.cc)
add_executable(dm13_objectOrientedModel1 dm13_objectOrientedModel1.cc)
add_executable(dm14_objectOrientedModel2 dm14_objectOrientedModel2.cc)
add_executable(dm15_this_point dm15_this_point.cc)
