add_executable(dm01_classEncapsulation dm01_classEncapsulation.cpp)
add_executable(dm02_classSeparateCompilation dm02_classSeparateCompilation/main.cpp dm02_classSeparateCompilation/teacher.cpp)
add_executable(dm03_objectOriented1 dm03_objectOriented1/main.cpp dm03_objectOriented1/cube.cpp)
add_executable(dm04_objectOriented2 dm04_objectOriented2/main.cpp dm04_objectOriented2/circle.cpp dm04_objectOriented2/point.cpp)
add_executable(dm05_classConstructor1 dm05_classConstructor/constructor1.cc)
add_executable(dm05_classConstructor2 dm05_classConstructor/constructor2.cc)
add_executable(dm05_classConstructor3 dm05_classConstructor/constructor3.cc)
add_executable(dm05_classConstructorCopy12 dm05_classConstructor/constructor_copy_1_2.cc)
add_executable(dm05_classConstructorCopy3 dm05_classConstructor/constructor_copy_3.cc)
add_executable(dm05_classConstructorCopy4 dm05_classConstructor/constructor_copy_4.cc)
add_executable(dm05_classConstructorSummarizing dm05_classConstructor/constructor_summarizing.cc)
add_executable(dm06_deepCopy dm06_deepCopy.cc)
add_executable(dm07_constructorInitializerList dm07_constructorInitializerList.cc)
add_executable(dm08_constructorSummary1 dm08_constructorSummary1.cc)
add_executable(dm09_constructorSunmary2 dm09_constructorSunmary2.cc)
add_executable(dm10_new_delete1 dm10_new_delete1.cc)
add_executable(dm11_new_delete2 dm11_new_delete2.cc)
add_executable(dm12_static dm12_static.cc)
add_executable(dm13_objectOrientedModel1 dm13_objectOrientedModel1.cc)
add_executable(dm14_objectOrientedModel2 dm14_objectOrientedModel2.cc)
add_executable(dm15_this_point dm15_this_point.cc)
add_executable(dm16_friend_function dm16_friend_function.cc)
add_executable(dm17_friend_class dm17_friend_class.cc)
add_executable(dm18_operator_overloading_1 dm18_operator_overloading_1.cc)
add_executable(dm19_operator_overloading_2 dm19_operator_overloading_2.cc)
add_executable(dm20_operator_overloading_3 dm20_operator_overloading_3.cc)
add_executable(dm21_operator_overloading_4 dm21_operator_overloading_4.cc)
add_executable(dm22_operator_overloading_5 dm22_operator_overloading_5.cc)
add_executable(dm23_operator_overloading_6 dm23_operator_overloading_6.cc)
add_executable(dm24_operator_overloading_7 dm24_operator_overloading_7.cc)
add_executable(dm25_operator_overloading_8 dm25_operator_overloading_8.cc)
add_executable(dm26_operator_overloading_9 dm26_operator_overloading_9.cc)
add_executable(dm27_mystring dm27_mystring/mystring.cc dm27_mystring/main.cc)
