add_executable(dm01_base dm01_容器算法迭代器入门.cpp)
add_executable(dm02_string dm02_string类.cpp)
add_executable(dm03_vector dm03_vector.cpp)
add_executable(dm04_deque dm04_deque.cpp)
add_executable(dm05_stack dm05_stack.cpp)
add_executable(dm06_queue dm06_queue.cpp)
add_executable(dm07_list dm07_list.cpp)
add_executable(dm08_priority_queue dm08_priority_queue.cpp)
add_executable(dm09_set dm09_set.cpp)
add_executable(dm10_multiset dm10_multiset.cpp)
add_executable(dm11_map dm11_map.cpp)
add_executable(dm12_multimap dm12_multimap.cpp)
add_executable(dm13_stl dm13_容器共性机制研究.cpp)
add_executable(dm14_stl dm14_函数对象和谓词.cpp)
add_executable(dm15_stl dm15_预定义函数对象和函数适配器.cpp)
add_executable(dm16_stl dm16_stl的容器算法迭代器的设计理念.cpp)
add_executable(dm17_stl dm17_常用的遍历算法.cpp)
add_executable(dm18_stl dm18_常用的查找算法.cpp)
add_executable(dm19_stl dm19_常用的排序算法.cpp)
add_executable(dm20_stl dm20_常用的拷贝和替换算法.cpp)
add_executable(dm21_stl dm21_常用的算术和生成算法.cpp)
add_executable(dm22_stl dm22_常用的集合算法.cpp)
