add_executable(dm01_lexical_cast dm01_数值转换lexical_cast.cpp)
add_executable(dm02_format dm02_格式化format.cpp)
add_executable(dm03_string_algo1 dm03_字符串算法string_algo1.cpp)
add_executable(dm04_string_algo2 dm04_字符串算法string_algo2.cpp)
add_executable(dm05_string_algo3 dm05_字符串算法string_algo3.cpp)
add_executable(dm06_BOOST_AUTO dm06_类型推导BOOST_AUTO和BOOST_TYPEOF.cpp)
add_executable(dm07_tokenizer dm07_分词处理库tokenizer.cpp)
add_executable(dm08_date_time1 dm08_日期时间库date_time1.cpp)
target_link_libraries(dm08_date_time1 boost_date_time)
add_executable(dm09_date_time2 dm09_日期时间库date_time2.cpp)
target_link_libraries(dm09_date_time2 boost_date_time)
add_executable(dm10_date_time3 dm10_日期时间库date_time3.cpp)
target_link_libraries(dm10_date_time3 boost_date_time)
add_executable(dm11_date_time4 dm11_日期时间库date_time4.cpp)
target_link_libraries(dm11_date_time4 boost_date_time)
