include(FindPkgConfig)
pkg_check_modules(JSONCPP jsoncpp)
if (JSONCPP_FOUND)
    include_directories(${JSONCPP_INCLUDE_DIRS})
    link_directories(${JSONCPP_LIBRARY_DIRS})
    link_libraries(${JSONCPP_LIBRARIES})
    add_executable(09_jsoncpp_dm01_base dm01_base.cpp)
    add_executable(09_jsoncpp_dm02_read_from_stream dm02_read_from_stream.cpp)
    add_executable(09_jsoncpp_dm03_read_from_string dm03_read_from_string.cpp)
    add_executable(09_jsoncpp_dm04_stream_write dm04_stream_write.cpp)
    add_executable(09_jsoncpp_dm05_string_write dm05_string_write.cpp)
endif ()
