include(FindPkgConfig)
pkg_check_modules(LIBACL libacl_all>=3.5.0)
if (LIBACL_FOUND)
    include_directories(${LIBACL_INCLUDE_DIRS})
    link_libraries(${LIBACL_LIBRARIES})
    add_executable(dm01_redis redis/redis.cpp)
    add_executable(dm02_redis_list redis/redis_list.cpp)
    add_executable(dm03_json json/json.cpp)
endif ()
